[package]
name = "copy-path"
version = "0.1.5"
edition = "2024"
description = "copy-path"
license = "MIT"
authors=["ahaoboy"]
repository="https://github.com/ahaoboy/copy-path"
homepage = "https://github.com/ahaoboy/copy-path"

[dependencies]
clipboard-win = "5"
path-absolutize = "3"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
